--- a/index.html
+++ b/index.html
@@ -3,11 +3,61 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="src/index.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@900&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
     <div class="wrap">
-        
-    </div>
+
+        <nav>
+            <ul class="flex j-b">
+                <li><a href="">2013</a></li>
+                <li><a href="">2014</a></li>
+                <li><a href="">2015</a></li>
+                <li><a href="">2016</a></li>
+                <li><a href="">2017</a></li>
+                <li><a href="">2018</a></li>
+                <li><a href="">2019</a></li>
+                <li><a href="">2020</a></li>
+                <li><a href="">2021</a></li>
+                <li><a href="">2022</a></li>
+                <li><a href="">2023</a></li>
+                <li><a href="">2024</a></li>
+            </ul>
+            <div class="nav-underline"></div>
+        </nav>
+
+        <div class="container main flex j-c">
+            <div class="main-title">
+                <div class="line">
+                    <h1>THE <span>GREATEST</span></h1>
+                    <h1>OF ALL <span>TIME</span></h1>
+                </div>
+                <div class="line">
+                    <h1><span>THE BEST PLAYER</span></h1>
+                    <h1>IN THE HISTORY</h1>
+                </div>
+                <div class="line">
+                    <h1>THE UNKILLABLE</h1>
+                    <h1><span>DEMON KING </span></h1>
+                </div>
+                <div class="line">
+                    <h1><span>FOUR TIME</span></h1>
+                    <h1>WORLDS <span>WINNER</span></h1>
+                </div>
+                <div class="line">
+                    <h1>YOUR KING</h1>
+                    <h1><span>FAKER</span></h1>
+                </div>
+            </div>
+            <img src="src/img/main.png" alt="faker">
+            <div class="sub-title">
+                <h1>" <span>All ROADS</span> EVENTUALLY <span>LEAD TO ME</span> "</h1>
+            </div>
+
+
+
+        </div>
 </body>
 </html>
