--- a/index.html
+++ b/index.html
@@ -177,52 +177,49 @@
             <div class="history-main">
                 <div class="section-line"></div>
                 <h1 class="section-margin">2013 <span>BEGINNING</span> OF HISTORY</h1>
-                <div class="hilight flex">
-                    <div class="history-inner left"></div>
-                    <div class="history-inner right"></div>
+
+                <div class="hilight section-margin flex">
+                    <button class="carousel-btn left-btn">left</button>
+                    <div class="scene-container">
+                        <div class="scene flex column j-c">
+                            <div class="scene-video">
+                                <video controls>
+                                    <source src="https://i.namu.wiki/i/44uOevOI62ALW4wClBctUA9B5M5uDzNPRRYRoX1ALdK83BS8ZIRQT4d1dnUQ2XzG3uzgDVRakkrVS9UPljZNvw.mp4" type="video/webm">
+                                </video>
+                            </div>
+                            <div class="scene-title">
+                                <h2>2013 <span>SPRING</span> APR 6TH <br>VS <span>CJ BLZE</span></h2>
+                            </div>
+                        </div>
+    
+                        <div class="scene flex column j-c">
+                            <div class="scene-video">
+                                <video controls>
+                                    <source src="https://i.namu.wiki/i/44uOevOI62ALW4wClBctUA9B5M5uDzNPRRYRoX1ALdK83BS8ZIRQT4d1dnUQ2XzG3uzgDVRakkrVS9UPljZNvw.mp4" type="video/webm">
+                                </video>
+                            </div>
+                            <div class="scene-title">
+                                <h2>2013 <span>SUMMER</span> FINAL <br>VS <span>KT ROLLSTER</span></h2>
+                            </div>
+                        </div>
+                        <div class="scene flex column j-c">
+                            <div class="scene-video">
+                                <video controls>
+                                    <source src="https://i.namu.wiki/i/9ZozL_0tZSEPDIdcBswQgYirdg2_E_N5lj3StnFF6uXa4qmwx0NsXFB6hilZDI9MAeRZYSpt8IdLorPJ2pBo_w.mp4" type="video/webm">
+                                </video>
+                            </div>
+                            <div class="scene-title">
+                                <h2>2013 <span>WORLDS</span> GROP STAGE <br>VS <span>TSM</span></h2>
+                            </div>
+                        </div>
+                    </div>
+                    <button class="carousel-btn right-btn">right</button>
                 </div>
-                <div class="relative"></div>
             </div>
 
         </div>
-
-        <!-- <div class="history-container" id="2013">
-            <div class="section-line"></div>
-                <h1>2013 <span>BEGINNING</span> OF HISTORY</h1>
-
-                <div class="hilight">
-
-                    <div class="button-box flex j-b">
-                        <button class="carousel-btn">left</button>
-                        <button class="carousel-btn">right</button>
-                    </div>
-
-                    <div class="scene flex column j-c">
-                        <video controls>
-                            <source src="https://i.namu.wiki/i/44uOevOI62ALW4wClBctUA9B5M5uDzNPRRYRoX1ALdK83BS8ZIRQT4d1dnUQ2XzG3uzgDVRakkrVS9UPljZNvw.mp4" type="video/webm">
-                        </video>
-                        <h2>2013 <span>SPRING</span> APR 6TH <br>VS <span>CJ BLZE</span></h2>
-                    </div>
-
-                    <div class="scene flex column j-c">
-                        <video controls>
-                            <source src="https://i.namu.wiki/i/44uOevOI62ALW4wClBctUA9B5M5uDzNPRRYRoX1ALdK83BS8ZIRQT4d1dnUQ2XzG3uzgDVRakkrVS9UPljZNvw.mp4" type="video/webm">
-                        </video>
-                        <h2>2013 <span>SUMMER</span> FINAL <br>VS <span>KT ROLLSTER</span></h2>
-                    </div>
-
-                    <div class="scene flex column j-c">
-                        <video controls>
-                            <source src="https://i.namu.wiki/i/9ZozL_0tZSEPDIdcBswQgYirdg2_E_N5lj3StnFF6uXa4qmwx0NsXFB6hilZDI9MAeRZYSpt8IdLorPJ2pBo_w.mp4" type="video/webm">
-                        </video>
-                        <h2>2013 <span>WORLDS</span> GROP STAGE <br>VS <span>TSM</span></h2>
-                    </div>
-
-                </div>
-
-        </div> -->
-
     </div>
     
+    <script src="src/script.js"></script>
 </body>
 </html>
