챔피언 섹션 작업 중

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <h2>#SYNDRA</h2>
                 </div>
 
-                <div class="line">
+                <div class="line not-active">
                     <h2>10 TIME<span> LEAGUE WINNER</span></h2>
                     <h2><span>2 TIME</span> MSI WINNER</h2>
                 </div>
@@ -78,17 +78,10 @@
                 <p><span>TEAM</span> T1 ( 2013. 04.~ )</p>
             </div>
 
-            
             <div class="champion-container section-margin">
                 <h2><span>FAVORITE</span> CHAMPIONS</h2>
-                <div class="champ-main section-margin flex">
-                    <div class="champ"></div>
-                    <div class="champ"></div>
-                    <div class="champ"></div>
-                    <div class="champ"></div>
-                    <div class="champ"></div>
-                    <div class="champ"></div>
-                    <div class="champ"></div>
+                <div class="champ-main section-margin">
+                    <div class="champ-container flex j-b"></div>
                 </div>
             </div>
 
