히스토리 레이아웃 변경

--- a/index.html
+++ b/index.html
@@ -173,14 +173,65 @@
                 <button class="history-btn"><i class="fa-solid fa-arrow-left-long"></i></button>
                 <button class="history-btn"><i class="fa-solid fa-arrow-right-long"></i></button>
             </div>
+            <div class="history-main-container section-padding flex c-c">
 
-            <div class="history-background"></div>
-            <div class="history-main section-padding">
+                <div class="history-main-inner flex c-c">
+                    <div class="history flex">
+
+                        <div class="video-container">
+
+                            <div class="video-inner flex">
+
+                                <div class="video-box">
+                                    <div class="video">
+
+                                    </div>
+                                </div>
+
+                                <div class="video-side">
+                                    <div class="button-container">
+
+                                    </div>
+                                    <div class="game-info-container">
+
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="video-info-container flex">
+                                <div class="video-info-inner">
+                                    <div class="video-info">
+
+                                    </div>
+                                </div>
+                                <div class="season-champ-info">
+                                    
+                                </div>
+                            </div>
+
+                        </div>
+
+                        <div class="season-container">
+                            <div class="season-header-container flex c-c">
+                                <div class="season-header">
+                                    <h1><span>Season</span><br>2013</h1>
+                                </div>
+                            </div>
+
+                            <div class="season-info-container">
+                                <div class="season-info">
+                                    <p><span>Season</span> Info</p>
+                                </div>
+                            </div>
+                            
+                        </div>
+                    </div>
+                </div>
 
             </div>
 
         </div>
     </div>
-    <script src="src/script.js"></script>
+    <!-- <script src="src/script.js"></script> -->
 </body>
 </html>
