--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="src/index.css">
     <link href="https://fonts.cdnfonts.com/css/r-spectr" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <title>Document</title>
+    <title>Faker</title>
 </head>
 <body>
     <div class="wrap">
@@ -164,7 +164,10 @@
         </div>
 
         <div class="history-container flex column c-c" id="history-container">
-            <div class="history-carousel-container flex c-c"></div>
+            <div class="carousel-nav-container inner-padding">
+                <nav class="carousel-nav hide"></nav>
+            </div>
+            <div class="history-carousel-container flex"></div>
         </div>
     </div>
     <script src="src/script.js"></script>
